# livescore-scraper

./: .gitignore  DEPLOYMENT.md  README.md  pyproject.toml  requirements.txt
src/: app.py  scraper.py
