[project]
name = "crawl-games"
version = "0.1.0"
description = "LiveScore team game crawler with CSV export"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.40.0",
    "requests>=2.32.0",
    "pandas>=2.2.0",
    "beautifulsoup4>=4.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

